# qa_guru_python_8_18_poetry

./: pyproject.toml
